apps/base/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: nginx
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - traefik.mangale.com.np
      secretName: traefik-tls
  rules:
    - host: traefik.mangale.com.np
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
